feat: Disable auto-cleanup of futures table and add comprehensive README
Changes:
- Disabled automatic deletion of futures table records when positions are closed
- Added comprehensive README.md with bilingual documentation (English/Chinese)
- Included system architecture diagrams using Mermaid
- Added detailed setup instructions, API documentation, and troubleshooting guide

Technical Details:
- Modified database_portfolios.py to preserve symbol configurations
- Created complete project documentation for open-source sharing
- Added architecture diagrams showing microservices structure and data flow

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>